Added mu components

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-body {
-    background-color: #a3a3a3;
-}
+/*body {*/
+/*    background-color: #a3a3a3;*/
+/*}*/
 
-.App {
-    display: flex;
-    padding: 20px;
-    font-size: 1.3rem;
-}
+/*.App {*/
+/*    display: flex;*/
+/*    padding: 20px;*/
+/*    font-size: 1.3rem;*/
+/*}*/
